# gwtm_api

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/hotwiring7/: candidate_tutorial.ipynb  pointing_tutorial.ipynb
src/gwtm_api/: __init__.py  alert.py  candidate.py  event_tools.py  instrument.py  pointing.py
src/gwtm_api/core/: __init__.py  apimodels.py  baseapi.py  enums.py  tmcache.py  util.py
tests/: candidate_test.py  instrument_test.py  pointing_tests.py
