[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gwtm_api"
version = "0.1.5"
authors = [
  { name="Samuel Wyatt", email="samuel.d.wyatt@nasa.gov" },
]
description = "A python API wrapper for the Gravitational Wave Treasure Map"
readme = "README.md"
requires-python = "<3.12"

dependencies = [
  "astropy",
  "healpy",
  "requests",
  "ligo.skymap",
  "matplotlib",
  "pandas"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TheTreasureMap/gwtm_api"
"Bug Tracker" = "https://github.com/TheTreasureMap/gwtm_api/issues"
